[package]
name = "all-of-hashtable"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["stat"]
stat = []

[dev-dependencies]
rand = "0.8.5"
criterion = "0.3.5"
plotly = { git = "https://github.com/igiagkiozis/plotly", features = ["kaleido"] }

[[bench]]
name = "open_addressings"
harness = false
